--- a/templates/findCourse.html
+++ b/templates/findCourse.html
@@ -36,7 +36,7 @@
             >
           </li>
           <li>
-            <a href="#">내코스</a>
+            <a href="./myFavoriteCourse.html">내코스</a>
           </li>
           <li>
             <a href="./myInfo.html">마이페이지</a>
@@ -74,52 +74,72 @@
           <section>
             <div class="items">
               <div class="find-course-list">
-                <div class="find-course-list__image"><img src="" alt="" /></div>
+                <div class="find-course-list__image">
+                  <img src="../images/logo_white_ver2.png" alt="어때" />
+                </div>
                 <div class="find-course-list__description"><h1>카페명</h1></div>
               </div>
 
               <div class="find-course-list">
-                <div class="find-course-list__image"><img src="" alt="" /></div>
+                <div class="find-course-list__image">
+                  <img src="../images/logo_white_ver2.png" alt="어때" />
+                </div>
                 <div class="find-course-list__description"><h1>카페명</h1></div>
               </div>
 
               <div class="find-course-list">
-                <div class="find-course-list__image"><img src="" alt="" /></div>
+                <div class="find-course-list__image">
+                  <img src="../images/logo_white_ver2.png" alt="어때" />
+                </div>
                 <div class="find-course-list__description"><h1>카페명</h1></div>
               </div>
 
               <div class="find-course-list">
-                <div class="find-course-list__image"><img src="" alt="" /></div>
+                <div class="find-course-list__image">
+                  <img src="../images/logo_white_ver2.png" alt="어때" />
+                </div>
                 <div class="find-course-list__description"><h1>카페명</h1></div>
               </div>
 
               <div class="find-course-list">
-                <div class="find-course-list__image"><img src="" alt="" /></div>
+                <div class="find-course-list__image">
+                  <img src="../images/logo_white_ver2.png" alt="어때" />
+                </div>
                 <div class="find-course-list__description"><h1>카페명</h1></div>
               </div>
 
               <div class="find-course-list">
-                <div class="find-course-list__image"><img src="" alt="" /></div>
+                <div class="find-course-list__image">
+                  <img src="../images/logo_white_ver2.png" alt="어때" />
+                </div>
                 <div class="find-course-list__description"><h1>카페명</h1></div>
               </div>
 
               <div class="find-course-list">
-                <div class="find-course-list__image"><img src="" alt="" /></div>
+                <div class="find-course-list__image">
+                  <img src="../images/logo_white_ver2.png" alt="어때" />
+                </div>
                 <div class="find-course-list__description"><h1>카페명</h1></div>
               </div>
 
               <div class="find-course-list">
-                <div class="find-course-list__image"><img src="" alt="" /></div>
+                <div class="find-course-list__image">
+                  <img src="../images/logo_white_ver2.png" alt="어때" />
+                </div>
                 <div class="find-course-list__description"><h1>카페명</h1></div>
               </div>
 
               <div class="find-course-list">
-                <div class="find-course-list__image"><img src="" alt="" /></div>
+                <div class="find-course-list__image">
+                  <img src="../images/logo_white_ver2.png" alt="어때" />
+                </div>
                 <div class="find-course-list__description"><h1>카페명</h1></div>
               </div>
 
               <div class="find-course-list">
-                <div class="find-course-list__image"><img src="" alt="" /></div>
+                <div class="find-course-list__image">
+                  <img src="../images/logo_white_ver2.png" alt="어때" />
+                </div>
                 <div class="find-course-list__description"><h1>카페명</h1></div>
               </div>
             </div>
@@ -136,7 +156,7 @@
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5b1cf534f0124bbf03d02def34505c63"
     ></script> -->
-    <script src="./js/map.js"></script>
+    <script src="./js/findCourseMap.js"></script>
     <!-- kakao map api - javascript -->
   </body>
 </html>
