--- a/templates/main.html
+++ b/templates/main.html
@@ -26,7 +26,7 @@
             <a href="./findCourse.html">코스찾기</a>
           </li>
           <li>
-            <a href="#">내코스</a>
+            <a href="./myFavoriteCourse.html">내코스</a>
           </li>
           <li>
             <a href="./myInfo.html">마이페이지</a>
@@ -56,7 +56,11 @@
       <article class="main-content">
         <div class="test1">
           <div class="test1_1">
-            <span> </span>
+            <img
+              src="https://post-phinf.pstatic.net/MjAxOTExMjJfMzAg/MDAxNTc0NDE3MjA5MzQ3.pPMDmOoOM5Xv-KHOqaH0ZEZv1NHj3gBqoiEZNBSqiX4g.Rq_o5tzSOVhrOPqh2U5a4i8o0LFaAGRBq4_fQgRcmPgg.PNG/15741572140119.png?type=w1200"
+              alt="fd"
+              style="width: 20em; height: 16em"
+            />
           </div>
           <div class="test1_2" onclick="location.href='findCourse.html'">
             <span>코스찾기</span>
@@ -64,7 +68,7 @@
         </div>
 
         <div class="test2">
-          <div class="test2_1">
+          <div class="test2_1" onclick="location.href='myFavoriteCourse.html'">
             <span>내코스</span>
           </div>
           <div class="test2_2">
