--- a/templates/findCourse.html
+++ b/templates/findCourse.html
@@ -72,6 +72,13 @@
 
           <!-- contents ( 10개 ) -->
           <section>
+            <div class="radius">
+              <button class="radius__button" value="100">100m</button>
+              <button class="radius__button" value="150">150m</button>
+              <button class="radius__button" value="200">200m</button>
+              <button class="radius__button" value="250">250m</button>
+              <button class="radius__button" value="300">300m</button>
+            </div>
             <div class="items">
               <div class="find-course-list">
                 <div class="find-course-list__image">
@@ -80,7 +87,7 @@
                 <div class="find-course-list__description"><h1>카페명</h1></div>
               </div>
 
-              <div class="find-course-list">
+              <!-- <div class="find-course-list">
                 <div class="find-course-list__image">
                   <img src="../images/logo_white_ver2.png" alt="어때" />
                 </div>
@@ -141,7 +148,7 @@
                   <img src="../images/logo_white_ver2.png" alt="어때" />
                 </div>
                 <div class="find-course-list__description"><h1>카페명</h1></div>
-              </div>
+              </div> -->
             </div>
           </section>
           <!-- contents -->
@@ -157,6 +164,7 @@
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5b1cf534f0124bbf03d02def34505c63"
     ></script> -->
     <script src="./js/findCourseMap.js"></script>
+    <script src="./js/findCourse.js"></script>
     <!-- kakao map api - javascript -->
   </body>
 </html>
