--- a/templates/myFavoriteCourse.html
+++ b/templates/myFavoriteCourse.html
@@ -62,6 +62,12 @@
         <div class="my-fav-list__container">
           <!-- contents ( 10개 ) -->
           <section>
+            <div class="radius">
+              <button class="radius__button" value="50">50m</button>
+              <button class="radius__button" value="100">100m</button>
+              <button class="radius__button" value="150">150m</button>
+              <button class="radius__button" value="200">200m</button>
+            </div>
             <div class="items">
               <div class="my-fav-list">
                 <div class="my-fav-list__image">
