--- a/templates/findCourse.html
+++ b/templates/findCourse.html
@@ -60,96 +60,34 @@
 
         <!-- search place -->
         <div class="find-course-list__container">
-          <div class="find-course__search">
-            <span class="material-symbols-outlined" id="search_icon">
-              search
-            </span>
-            <input type="text" id="find-course__searchbar" />
-            <span class="material-symbols-outlined" id="location_button">
-              my_location
-            </span>
-          </div>
+          <form action="" onsubmit="searchPlaces(); return false;">
+            <div class="find-course__search">
+              <span class="material-symbols-outlined" id="search_icon">
+                search
+              </span>
+              <input type="text" id="find-course__searchbar" />
+              <span
+                class="material-symbols-outlined"
+                id="location_button"
+                onclick="getCurrentPosBtn()"
+              >
+                my_location
+              </span>
+            </div>
+          </form>
 
           <!-- contents ( 10개 ) -->
           <section>
             <div class="radius">
-              <button class="radius__button" value="100">100m</button>
-              <button class="radius__button" value="150">150m</button>
-              <button class="radius__button" value="200">200m</button>
-              <button class="radius__button" value="250">250m</button>
               <button class="radius__button" value="300">300m</button>
+              <button class="radius__button" value="600">600m</button>
+              <button class="radius__button" value="900">900m</button>
+              <button class="radius__button" value="1200">1200m</button>
             </div>
-            <div class="items">
-              <div class="find-course-list">
-                <div class="find-course-list__image">
-                  <img src="../images/logo_white_ver2.png" alt="어때" />
-                </div>
-                <div class="find-course-list__description"><h1>카페명</h1></div>
+              <div class="right-box3">
+                <ul id="placesList"></ul>
+                <div id="pagination"></div>
               </div>
-
-              <!-- <div class="find-course-list">
-                <div class="find-course-list__image">
-                  <img src="../images/logo_white_ver2.png" alt="어때" />
-                </div>
-                <div class="find-course-list__description"><h1>카페명</h1></div>
-              </div>
-
-              <div class="find-course-list">
-                <div class="find-course-list__image">
-                  <img src="../images/logo_white_ver2.png" alt="어때" />
-                </div>
-                <div class="find-course-list__description"><h1>카페명</h1></div>
-              </div>
-
-              <div class="find-course-list">
-                <div class="find-course-list__image">
-                  <img src="../images/logo_white_ver2.png" alt="어때" />
-                </div>
-                <div class="find-course-list__description"><h1>카페명</h1></div>
-              </div>
-
-              <div class="find-course-list">
-                <div class="find-course-list__image">
-                  <img src="../images/logo_white_ver2.png" alt="어때" />
-                </div>
-                <div class="find-course-list__description"><h1>카페명</h1></div>
-              </div>
-
-              <div class="find-course-list">
-                <div class="find-course-list__image">
-                  <img src="../images/logo_white_ver2.png" alt="어때" />
-                </div>
-                <div class="find-course-list__description"><h1>카페명</h1></div>
-              </div>
-
-              <div class="find-course-list">
-                <div class="find-course-list__image">
-                  <img src="../images/logo_white_ver2.png" alt="어때" />
-                </div>
-                <div class="find-course-list__description"><h1>카페명</h1></div>
-              </div>
-
-              <div class="find-course-list">
-                <div class="find-course-list__image">
-                  <img src="../images/logo_white_ver2.png" alt="어때" />
-                </div>
-                <div class="find-course-list__description"><h1>카페명</h1></div>
-              </div>
-
-              <div class="find-course-list">
-                <div class="find-course-list__image">
-                  <img src="../images/logo_white_ver2.png" alt="어때" />
-                </div>
-                <div class="find-course-list__description"><h1>카페명</h1></div>
-              </div>
-
-              <div class="find-course-list">
-                <div class="find-course-list__image">
-                  <img src="../images/logo_white_ver2.png" alt="어때" />
-                </div>
-                <div class="find-course-list__description"><h1>카페명</h1></div>
-              </div> -->
-            </div>
           </section>
           <!-- contents -->
         </div>
