--- a/templates/main.html
+++ b/templates/main.html
@@ -56,11 +56,11 @@
       <article class="main-content">
         <div class="test1">
           <div class="test1_1">
-            <img
+            <!-- <img
               src="https://post-phinf.pstatic.net/MjAxOTExMjJfMzAg/MDAxNTc0NDE3MjA5MzQ3.pPMDmOoOM5Xv-KHOqaH0ZEZv1NHj3gBqoiEZNBSqiX4g.Rq_o5tzSOVhrOPqh2U5a4i8o0LFaAGRBq4_fQgRcmPgg.PNG/15741572140119.png?type=w1200"
               alt="fd"
               style="width: 20em; height: 16em"
-            />
+            /> -->
           </div>
           <div class="test1_2" onclick="location.href='findCourse.html'">
             <span>코스찾기</span>
