--- a/templates/findCourse.html
+++ b/templates/findCourse.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FindCourse</title>
+    <title>Find Course</title>
     <link rel="stylesheet" href="./css/findCourse.css" />
     <link
       rel="stylesheet"
@@ -30,6 +30,7 @@
       </div>
       <nav class="find-course__nav__list">
         <ul>
+          <li><a href="./ingi.html">인기코스</a></li>
           <li>
             <a href="./findCourse.html" style="border-bottom: 2px solid white"
               >코스찾기</a
