--- a/templates/myFavoriteCourse.html
+++ b/templates/myFavoriteCourse.html
@@ -34,6 +34,7 @@
       </div>
       <nav class="my-fav__nav__list">
         <ul>
+          <li><a href="./ingi.html">인기코스</a></li>
           <li>
             <a href="./findCourse.html">코스찾기</a>
           </li>
