--- a/templates/myInfo.html
+++ b/templates/myInfo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Page</title>
+    <title>My info Page</title>
     <link rel="stylesheet" href="./css/myInfo.css" />
   </head>
   <body>
@@ -22,6 +22,7 @@
       </div>
       <nav class="my-info-nav__list">
         <ul>
+          <li><a href="./ingi.html">인기코스</a></li>
           <li>
             <a href="./findCourse.html">코스찾기</a>
           </li>
