--- a/templates/login.html
+++ b/templates/login.html
@@ -6,10 +6,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>login</title>
+    <title>Sign In Page</title>
   </head>
   <body>
-    
     <!--login container-->
     <div class="login-container">
       <!-- login-->
