--- a/templates/myInfoSetting.html
+++ b/templates/myInfoSetting.html
@@ -22,6 +22,7 @@
       </div>
       <nav class="my-info-nav__list">
         <ul>
+          <li><a href="./ingi.html">인기코스</a></li>
           <li>
             <a href="./findCourse.html">코스찾기</a>
           </li>
