--- a/templates/findCourse.html
+++ b/templates/findCourse.html
@@ -30,11 +30,13 @@
       </div>
       <nav class="find-course__nav__list">
         <ul>
-          <li><a href="./ingi.html">인기코스</a></li>
           <li>
-            <a href="./findCourse.html" style="border-bottom: 2px solid white"
-              >코스찾기</a
-            >
+            <a href="./ingi.html">인기코스</a>
+          </li>
+          <li>
+            <a href="./findCourse.html" style="border-bottom: 2px solid white">
+              코스찾기
+            </a>
           </li>
           <li>
             <a href="./myFavoriteCourse.html">내코스</a>
@@ -85,10 +87,10 @@
               <button class="radius__button" value="900">900m</button>
               <button class="radius__button" value="1200">1200m</button>
             </div>
-              <div class="right-box3">
-                <ul id="placesList"></ul>
-                <div id="pagination"></div>
-              </div>
+            <div class="right-box3">
+              <ul id="placesList"></ul>
+              <div id="pagination"></div>
+            </div>
           </section>
           <!-- contents -->
         </div>
