--- a/templates/css/ingi.css
+++ b/templates/css/ingi.css
@@ -108,37 +108,53 @@
 .ingi-list {
   /* height: 8.5em; */
   border: 2px solid #eee;
-  border-radius: 5px;
-  padding: 0.25em;
+  border-radius: 12px;
+  padding-top: 5em;
+  padding: 1em;
   align-items: center;
   margin-bottom: 1em;
   cursor: pointer;
+  background: sandybrown;
+  /* background-image:url("../../images/dasom.jpg"); */
+  background-size: cover;
 }
 
 .ingi-list:hover {
-  background: #eee;
+  /* background: #eee; */
+
+}
+
+.ingi-list__description {
+  border-radius: 12px;
+  background: beige;
+  padding: 1em;
+  opacity: 0;
+  transition: all ease .5s;
+}
+
+.ingi-list__description:hover {
+  opacity: 1;
 }
 
 .ingi-list__description h1 {
-  border: 1px solid #eee;
+  border: 1px solid #ff5757;
   padding: 0.5em 0;
   border-radius: 8px;
-  background: #ff5757;
-  color: white;
+  background: beige;
+  color: #ff5757;
   margin-bottom: 5px;
+  transition: all ease .5s;
 }
 
 .items-img {
-  height: 13em;
   margin-bottom: 1em;
   align-items: center;
 }
-.items-img img {
-  width: 100%;
-  height: 13em;
-  border-radius: 8px;
-  background: beige;
+
+.ingi-list__description span {
+  color: #ff5757;
 }
+
 .ingi-list__description .phone {
   margin-top: 0.25em;
   font-size: 1.05em;
