--- a/templates/myFavoriteCourse.html
+++ b/templates/myFavoriteCourse.html
@@ -6,20 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Favorite Course</title>
     <link rel="stylesheet" href="./css/myFavoriteCourse.css" />
-    <!-- font -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Jua&display=swap"
-      rel="stylesheet"
-    /> -->
-    <!-- font -->
   </head>
   <body>
+    <!-- KakaoMapApi Javascript -->
     <script
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5b1cf534f0124bbf03d02def34505c63&libraries=services,clusterer,drawing"
     ></script>
+    <!-- KakaoMapApi Javascript -->
     <!-- header -->
     <header class="my-fav__header">
       <div>
@@ -34,7 +28,9 @@
       </div>
       <nav class="my-fav__nav__list">
         <ul>
-          <li><a href="./ingi.html">인기코스</a></li>
+          <li>
+            <a href="./ingi.html">인기코스</a>
+          </li>
           <li>
             <a href="./findCourse.html">코스찾기</a>
           </li>
@@ -42,8 +38,9 @@
             <a
               href="./myFavoriteCourse.html"
               style="border-bottom: 2px solid white"
-              >내코스</a
             >
+              내코스
+            </a>
           </li>
           <li>
             <a href="./myInfo.html">마이페이지</a>
@@ -63,83 +60,216 @@
         <div class="my-fav-list__container">
           <!-- contents ( 10개 ) -->
           <section>
-            <!-- <div class="radius">
-              <button class="radius__button" value="50">50m</button>
-              <button class="radius__button" value="100">100m</button>
-              <button class="radius__button" value="150">150m</button>
-              <button class="radius__button" value="200">200m</button>
-            </div> -->
             <div class="items">
               <div class="my-fav-list">
-                <div class="my-fav-list__image">
-                  <img src="../images/logo_white_ver2.png" alt="어때" />
+                <div>
+                  <div class="my-fav-list__description">
+                    <h1 class="first">찜!</h1>
+                    <div class="first__item">
+                      <span class="first__description"></span>
+                    </div>
+                  </div>
                 </div>
+
+                <div>
+                  <div class="my-fav-list__description">
+                    <h1 class="second">찜!</h1>
+                    <div class="second__item">
+                      <span class="second__description"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="my-fav-list">
+              <div>
                 <div class="my-fav-list__description">
-                  <h1>찜!</h1>
+                  <h1 class="first">찜!</h1>
+                  <div class="first__item">
+                    <span class="first__description"></span>
+                  </div>
                 </div>
               </div>
 
-              <div class="my-fav-list">
-                <div class="my-fav-list__image">
-                  <img src="../images/logo_white_ver2.png" alt="어때" />
+              <div>
+                <div class="my-fav-list__description">
+                  <h1 class="second">찜!</h1>
+                  <div class="second__item">
+                    <span class="second__description"></span>
+                  </div>
                 </div>
-                <div class="my-fav-list__description"><h1>찜!</h1></div>
+              </div>
+            </div>
+            <div class="my-fav-list">
+              <div>
+                <div class="my-fav-list__description">
+                  <h1 class="first">찜!</h1>
+                  <div class="first__item">
+                    <span class="first__description"></span>
+                  </div>
+                </div>
               </div>
 
-              <div class="my-fav-list">
-                <div class="my-fav-list__image">
-                  <img src="../images/logo_white_ver2.png" alt="어때" />
+              <div>
+                <div class="my-fav-list__description">
+                  <h1 class="second">찜!</h1>
+                  <div class="second__item">
+                    <span class="second__description"></span>
+                  </div>
                 </div>
-                <div class="my-fav-list__description"><h1>찜!</h1></div>
+              </div>
+            </div>
+            <div class="my-fav-list">
+              <div>
+                <div class="my-fav-list__description">
+                  <h1 class="first">찜!</h1>
+                  <div class="first__item">
+                    <span class="first__description"></span>
+                  </div>
+                </div>
               </div>
 
-              <div class="my-fav-list">
-                <div class="my-fav-list__image">
-                  <img src="../images/logo_white_ver2.png" alt="어때" />
+              <div>
+                <div class="my-fav-list__description">
+                  <h1 class="second">찜!</h1>
+                  <div class="second__item">
+                    <span class="second__description"></span>
+                  </div>
                 </div>
-                <div class="my-fav-list__description"><h1>찜!</h1></div>
+              </div>
+            </div>
+            <div class="my-fav-list">
+              <div>
+                <div class="my-fav-list__description">
+                  <h1 class="first">찜!</h1>
+                  <div class="first__item">
+                    <span class="first__description"></span>
+                  </div>
+                </div>
               </div>
 
-              <div class="my-fav-list">
-                <div class="my-fav-list__image">
-                  <img src="../images/logo_white_ver2.png" alt="어때" />
+              <div>
+                <div class="my-fav-list__description">
+                  <h1 class="second">찜!</h1>
+                  <div class="second__item">
+                    <span class="second__description"></span>
+                  </div>
                 </div>
-                <div class="my-fav-list__description"><h1>찜!</h1></div>
+              </div>
+            </div>
+            <div class="my-fav-list">
+              <div>
+                <div class="my-fav-list__description">
+                  <h1 class="first">찜!</h1>
+                  <div class="first__item">
+                    <span class="first__description"></span>
+                  </div>
+                </div>
               </div>
 
-              <div class="my-fav-list">
-                <div class="my-fav-list__image">
-                  <img src="../images/logo_white_ver2.png" alt="어때" />
+              <div>
+                <div class="my-fav-list__description">
+                  <h1 class="second">찜!</h1>
+                  <div class="second__item">
+                    <span class="second__description"></span>
+                  </div>
                 </div>
-                <div class="my-fav-list__description"><h1>찜!</h1></div>
+              </div>
+            </div>
+            <div class="my-fav-list">
+              <div>
+                <div class="my-fav-list__description">
+                  <h1 class="first">찜!</h1>
+                  <div class="first__item">
+                    <span class="first__description"></span>
+                  </div>
+                </div>
               </div>
 
-              <div class="my-fav-list">
-                <div class="my-fav-list__image">
-                  <img src="../images/logo_white_ver2.png" alt="어때" />
+              <div>
+                <div class="my-fav-list__description">
+                  <h1 class="second">찜!</h1>
+                  <div class="second__item">
+                    <span class="second__description"></span>
+                  </div>
                 </div>
-                <div class="my-fav-list__description"><h1>찜!</h1></div>
+              </div>
+            </div>
+            <div class="my-fav-list">
+              <div>
+                <div class="my-fav-list__description">
+                  <h1 class="first">찜!</h1>
+                  <div class="first__item">
+                    <span class="first__description"></span>
+                  </div>
+                </div>
               </div>
 
-              <div class="my-fav-list">
-                <div class="my-fav-list__image">
-                  <img src="../images/logo_white_ver2.png" alt="어때" />
+              <div>
+                <div class="my-fav-list__description">
+                  <h1 class="second">찜!</h1>
+                  <div class="second__item">
+                    <span class="second__description"></span>
+                  </div>
                 </div>
-                <div class="my-fav-list__description"><h1>찜!</h1></div>
+              </div>
+            </div>
+            <div class="my-fav-list">
+              <div>
+                <div class="my-fav-list__description">
+                  <h1 class="first">찜!</h1>
+                  <div class="first__item">
+                    <span class="first__description"></span>
+                  </div>
+                </div>
               </div>
 
-              <div class="my-fav-list">
-                <div class="my-fav-list__image">
-                  <img src="../images/logo_white_ver2.png" alt="어때" />
+              <div>
+                <div class="my-fav-list__description">
+                  <h1 class="second">찜!</h1>
+                  <div class="second__item">
+                    <span class="second__description"></span>
+                  </div>
                 </div>
-                <div class="my-fav-list__description"><h1>찜!</h1></div>
+              </div>
+            </div>
+            <div class="my-fav-list">
+              <div>
+                <div class="my-fav-list__description">
+                  <h1 class="first">찜!</h1>
+                  <div class="first__item">
+                    <span class="first__description"></span>
+                  </div>
+                </div>
               </div>
 
-              <div class="my-fav-list">
-                <div class="my-fav-list__image">
-                  <img src="../images/logo_white_ver2.png" alt="어때" />
+              <div>
+                <div class="my-fav-list__description">
+                  <h1 class="second">찜!</h1>
+                  <div class="second__item">
+                    <span class="second__description"></span>
+                  </div>
                 </div>
-                <div class="my-fav-list__description"><h1>찜!</h1></div>
+              </div>
+            </div>
+            <div class="my-fav-list">
+              <div>
+                <div class="my-fav-list__description">
+                  <h1 class="first">찜!</h1>
+                  <div class="first__item">
+                    <span class="first__description"></span>
+                  </div>
+                </div>
+              </div>
+
+              <div>
+                <div class="my-fav-list__description">
+                  <h1 class="second">찜!</h1>
+                  <div class="second__item">
+                    <span class="second__description"></span>
+                  </div>
+                </div>
               </div>
             </div>
           </section>
@@ -157,10 +287,6 @@
     <!-- main-content -->
 
     <!-- kakao map api - javascript -->
-    <!-- <script
-      type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5b1cf534f0124bbf03d02def34505c63"
-    ></script> -->
     <script src="./js/myFavoriteCourseMap.js"></script>
     <script src="./js/myFavoriteCourse.js"></script>
     <!-- kakao map api - javascript -->
