--- a/templates/ingi.html
+++ b/templates/ingi.html
@@ -51,95 +51,49 @@
       <article class="ingi__container">
         <!-- user Favorite Course place -->
         <div class="ingi-list__container">
+          <div class="ingi__choice">
+            <select name="ingi-gender" id="ingi-gender" class="ingi-box">
+              <option selected>성별</option>
+              <option>남자</option>
+              <option>여자</option>
+            </select>
+            <select name="ingi-age" id="ingi-age" class="ingi-box">
+              <option selected>나이</option>
+              <option>10</option>
+              <option>20</option>
+              <option>30</option>
+              <option>40</option>
+              <option>50</option>
+            </select>
+            <select name="ingi-do" id="ingi-do" class="ingi-box">
+              <option selected>도</option>
+              <option>충청남도</option>
+            </select>
+            <select name="ingi-si" id="ingi-si" class="ingi-box">
+              <option selected>시</option>
+              <option>천안시</option>
+            </select>
+          </div>
           <!-- contents ( 10개 ) -->
           <section>
             <div class="items">
               <div class="ingi-list">
-                <div class="ingi-list__description">
-                  <h1>찜!</h1>
-                  <span class="road_address"></span>,
-                  <span class="address"></span>
-                  <span class="phone"></span>
+                <div>
+                  <div class="ingi-list__description">
+                    <h1 class="first">찜!</h1>
+                    <div class="first__item">
+                      <span class="first__description"></span>
+                    </div>
+                  </div>
                 </div>
-              </div>
-              <div class="ingi-list">
-                <div class="ingi-list__description">
-                  <h1>찜!</h1>
-                  <span class="road_address"></span>,
-                  <span class="address"></span>
-                  <span class="phone"></span>
-                </div>
-              </div>
-              <div class="ingi-list">
-                <div class="ingi-list__description">
-                  <h1>찜!</h1>
-                  <span class="road_address"></span>
-                  <span class="address"></span>
-                  <span class="phone"></span>
-                </div>
-              </div>
-              <div class="ingi-list">
-                <div class="ingi-list__description">
-                  <h1>찜!</h1>
-                  <span class="road_address"></span>
-                  <span class="address"></span>
-                  <span class="phone"></span>
-                </div>
-              </div>
-              <div class="ingi-list">
-                <div class="ingi-list__description">
-                  <h1>찜!</h1>
-                  <span class="road_address"></span>
-                  <span class="address"></span>
-                  <span class="phone"></span>
-                </div>
-              </div>
-              <div class="ingi-list">
-                <div class="ingi-list__description">
-                  <h1>찜!</h1>
-                  <span class="road_address"></span>
-                  <span class="address"></span>
-                  <span class="phone"></span>
-                </div>
-              </div>
-              <div class="ingi-list">
-                <div class="ingi-list__description">
-                  <h1>찜!</h1>
-                  <span class="road_address"></span>
-                  <span class="address"></span>
-                  <span class="phone"></span>
-                </div>
-              </div>
-              <div class="ingi-list">
-                <div class="ingi-list__description">
-                  <h1>찜!</h1>
-                  <span class="road_address"></span>
-                  <span class="address"></span>
-                  <span class="phone"></span>
-                </div>
-              </div>
-              <div class="ingi-list">
-                <div class="ingi-list__description">
-                  <h1>찜!</h1>
-                  <span class="road_address"></span>
-                  <span class="address"></span>
-                  <span class="phone"></span>
-                </div>
-              </div>
-              <div class="ingi-list">
-                <div class="ingi-list__description">
-                  <h1>찜!</h1>
-                  <span class="road_address"></span>
-                  <span class="address"></span>
-                  <span class="phone"></span>
-                </div>
-              </div>
-              <div class="ingi-list">
-                <div class="ingi-list__description">
-                  <h1>찜!</h1>
-                  <span class="road_address"></span>
-                  <span class="address"></span>
-                  <span class="phone"></span>
+
+                <div>
+                  <div class="ingi-list__description">
+                    <h1 class="second">찜!</h1>
+                    <div class="second__item">
+                      <span class="second__description"></span>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
