--- a/templates/main.html
+++ b/templates/main.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MainPage</title>
     <link rel="stylesheet" href="./css/main.css" />
+    <script src="js/map.js"></script>
   </head>
   <body>
     <!-- header start -->
@@ -56,10 +57,12 @@
     <main class="main-container">
       <article class="main-content">
         <div class="test1">
-          <div class="test1_1" onclick="location.href='ingi.html'" style="cursor: pointer;">
-            <span>
-              인기코스
-            </span>
+          <div
+            class="test1_1"
+            onclick="location.href='ingi.html'"
+            style="cursor: pointer"
+          >
+            <span> 인기코스 </span>
           </div>
           <div class="test1_2" onclick="location.href='findCourse.html'">
             <span>코스찾기</span>
