--- a/templates/login.html
+++ b/templates/login.html
@@ -28,7 +28,7 @@
       </div>
       <div class="loginfind">
         <ul>
-          <li><a href="#">아이디찾기</a></li>
+          <li><a href="./findId.html">아이디찾기</a></li>
           <li><a href="#">비밀번호찾기</a></li>
         </ul>
       </div>
