--- a/templates/ingi.html
+++ b/templates/ingi.html
@@ -77,24 +77,24 @@
           <!-- contents ( 10개 ) -->
           <section>
             <div class="items">
-              <div class="ingi-list">
-                <div>
-                  <div class="ingi-list__description">
-                    <h1 class="first">찜!</h1>
-                    <div class="first__item">
-                      <span class="first__description"></span>
-                    </div>
-                  </div>
-                </div>
+              <div id="ingi-list">
+<!--                <div>-->
+<!--                  <div class="ingi-list__description">-->
+<!--                    <h1 class="first">찜!</h1>-->
+<!--                    <div class="first__item">-->
+<!--                      <span class="first__description"></span>-->
+<!--                    </div>-->
+<!--                  </div>-->
+<!--                </div>-->
 
-                <div>
-                  <div class="ingi-list__description">
-                    <h1 class="second">찜!</h1>
-                    <div class="second__item">
-                      <span class="second__description"></span>
-                    </div>
-                  </div>
-                </div>
+<!--                <div>-->
+<!--                  <div class="ingi-list__description">-->
+<!--                    <h1 class="second">찜!</h1>-->
+<!--                    <div class="second__item">-->
+<!--                      <span class="second__description"></span>-->
+<!--                    </div>-->
+<!--                  </div>-->
+<!--                </div>-->
               </div>
             </div>
           </section>
