--- a/templates/myFavoriteCourse.html
+++ b/templates/myFavoriteCourse.html
@@ -60,217 +60,7 @@
         <div class="my-fav-list__container">
           <!-- contents ( 10개 ) -->
           <section>
-            <div class="items">
-              <div class="my-fav-list">
-                <div>
-                  <div class="my-fav-list__description">
-                    <h1 class="first">찜!</h1>
-                    <div class="first__item">
-                      <span class="first__description"></span>
-                    </div>
-                  </div>
-                </div>
-
-                <div>
-                  <div class="my-fav-list__description">
-                    <h1 class="second">찜!</h1>
-                    <div class="second__item">
-                      <span class="second__description"></span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="my-fav-list">
-              <div>
-                <div class="my-fav-list__description">
-                  <h1 class="first">찜!</h1>
-                  <div class="first__item">
-                    <span class="first__description"></span>
-                  </div>
-                </div>
-              </div>
-
-              <div>
-                <div class="my-fav-list__description">
-                  <h1 class="second">찜!</h1>
-                  <div class="second__item">
-                    <span class="second__description"></span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="my-fav-list">
-              <div>
-                <div class="my-fav-list__description">
-                  <h1 class="first">찜!</h1>
-                  <div class="first__item">
-                    <span class="first__description"></span>
-                  </div>
-                </div>
-              </div>
-
-              <div>
-                <div class="my-fav-list__description">
-                  <h1 class="second">찜!</h1>
-                  <div class="second__item">
-                    <span class="second__description"></span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="my-fav-list">
-              <div>
-                <div class="my-fav-list__description">
-                  <h1 class="first">찜!</h1>
-                  <div class="first__item">
-                    <span class="first__description"></span>
-                  </div>
-                </div>
-              </div>
-
-              <div>
-                <div class="my-fav-list__description">
-                  <h1 class="second">찜!</h1>
-                  <div class="second__item">
-                    <span class="second__description"></span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="my-fav-list">
-              <div>
-                <div class="my-fav-list__description">
-                  <h1 class="first">찜!</h1>
-                  <div class="first__item">
-                    <span class="first__description"></span>
-                  </div>
-                </div>
-              </div>
-
-              <div>
-                <div class="my-fav-list__description">
-                  <h1 class="second">찜!</h1>
-                  <div class="second__item">
-                    <span class="second__description"></span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="my-fav-list">
-              <div>
-                <div class="my-fav-list__description">
-                  <h1 class="first">찜!</h1>
-                  <div class="first__item">
-                    <span class="first__description"></span>
-                  </div>
-                </div>
-              </div>
-
-              <div>
-                <div class="my-fav-list__description">
-                  <h1 class="second">찜!</h1>
-                  <div class="second__item">
-                    <span class="second__description"></span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="my-fav-list">
-              <div>
-                <div class="my-fav-list__description">
-                  <h1 class="first">찜!</h1>
-                  <div class="first__item">
-                    <span class="first__description"></span>
-                  </div>
-                </div>
-              </div>
-
-              <div>
-                <div class="my-fav-list__description">
-                  <h1 class="second">찜!</h1>
-                  <div class="second__item">
-                    <span class="second__description"></span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="my-fav-list">
-              <div>
-                <div class="my-fav-list__description">
-                  <h1 class="first">찜!</h1>
-                  <div class="first__item">
-                    <span class="first__description"></span>
-                  </div>
-                </div>
-              </div>
-
-              <div>
-                <div class="my-fav-list__description">
-                  <h1 class="second">찜!</h1>
-                  <div class="second__item">
-                    <span class="second__description"></span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="my-fav-list">
-              <div>
-                <div class="my-fav-list__description">
-                  <h1 class="first">찜!</h1>
-                  <div class="first__item">
-                    <span class="first__description"></span>
-                  </div>
-                </div>
-              </div>
-
-              <div>
-                <div class="my-fav-list__description">
-                  <h1 class="second">찜!</h1>
-                  <div class="second__item">
-                    <span class="second__description"></span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="my-fav-list">
-              <div>
-                <div class="my-fav-list__description">
-                  <h1 class="first">찜!</h1>
-                  <div class="first__item">
-                    <span class="first__description"></span>
-                  </div>
-                </div>
-              </div>
-
-              <div>
-                <div class="my-fav-list__description">
-                  <h1 class="second">찜!</h1>
-                  <div class="second__item">
-                    <span class="second__description"></span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="my-fav-list">
-              <div>
-                <div class="my-fav-list__description">
-                  <h1 class="first">찜!</h1>
-                  <div class="first__item">
-                    <span class="first__description"></span>
-                  </div>
-                </div>
-              </div>
-
-              <div>
-                <div class="my-fav-list__description">
-                  <h1 class="second">찜!</h1>
-                  <div class="second__item">
-                    <span class="second__description"></span>
-                  </div>
-                </div>
-              </div>
+            <div id="items">
             </div>
           </section>
           <!-- contents -->
