--- a/templates/main.html
+++ b/templates/main.html
@@ -23,6 +23,7 @@
       </div>
       <nav class="main-nav__list">
         <ul>
+          <li>hello</li>
           <li><a href="./ingi.html">인기코스</a></li>
           <li>
             <a href="./findCourse.html">코스찾기</a>
